이메일 추가, 헤더말고 쿠키로 변경